--- a/src/Window/Window.module.scss
+++ b/src/Window/Window.module.scss
@@ -13,8 +13,8 @@ $baseColor: #D2D1C8;
   height: 300px;
   width: 300px;
   position: absolute;
-  top: 100px;
-  left: 100px;
+  top: calc(100% / 3);
+  left: calc(100% / 3);
   z-index: 5;
 
   @include depthEffect($baseColor, #41413F);
@@ -33,7 +33,7 @@ $baseColor: #D2D1C8;
       width: 100%;
       height: 24px;
       background: linear-gradient(90deg, rgba(10,36,106,1) 0%, rgba(9,9,121,1) 25%, rgba(166,202,241,1) 100%);
-      padding: 0 10px 0 20px;
+      padding: 0 0 0 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
